Added padding and margin to the elements on the page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -102,7 +102,7 @@
                 <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
             
             <div class="card-img-overlay">
-                <a href="{{ category.get_url }}">
+                <a href="{{ category.get_url }}" class="category-link">
                     <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}
                     </h5>
                 </a>
