--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,13 @@ header,
     color: #fafafa;
 }
 
+.nav-link {
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.2rem;
+    text-shadow: 2px 2px #000000;
+}
+
 .navbar-toggler {
     background-color: #fafafa;
 }
@@ -160,12 +167,18 @@ a:active,
 .testimony-div {
     background-color: black;
     border: 2px dotted white;
-    margin: 5px;
+    margin: 2rem;
+    padding: 1rem;
     width: 100%;
     height: 230px;
     box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
 
+.category-link {
+    text-decoration: none !important;
+    color: #000000;
+    z-index: 2;
+}
 
 .category-heading {
     color: #da8925;
