--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-lg-6">
                 <div class="btn-group">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
+                    <button class="btn btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Choose Your Category
                     </button>
@@ -58,7 +58,7 @@
             <!--Sorting-->
             <div class="col-lg-6">
                 <div class="btn-group">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    <button class="btn btn-dropdown dropdown-toggle" type="button" id="dropdownMenuButton"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Sort By
                     </button>
