Added a class to a link on line 118

--- a/trips/templates/trips/trips.html
+++ b/trips/templates/trips/trips.html
@@ -115,7 +115,7 @@
                             <li class="list-group-item"><i class="fas fa-child"></i>Family</li>
                             {% endif %}
                         </ul>
-                        <a href="{{ trip.get_url }}" class="btn ml-3 btn-more"><i class="fas fa-plus"></i>More Info
+                        <a href="{{ trip.get_url }}" class="btn ml-3 btn-more btn-bottom"><i class="fas fa-plus"></i>More Info
                         </a>
                     </div>
                   </div>
